# mailbridge

./: Cargo.toml  LICENSE  Makefile  README.md  deny.toml
.github/workflows/: ci.yml  release.yml  scheduled-security.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  ROADMAP.md  SECURITY.md  architecture-and-design.md  telemetry.md  usage.md
examples/: opentelemetry_logging.rs  queue_worker.rs  send_bird.rs  send_brevo.rs  send_http.rs  send_mailgun.rs  send_mailjet_sandbox.rs  send_mailjet_v3.rs  send_resend.rs  send_sendgrid.rs  send_sendpulse.rs
src/: lib.rs
src/client/: mail_client.rs  mod.rs
src/config/: env.rs  mod.rs
src/email/: address.rs  attachment.rs  message.rs  mod.rs
src/error/: kind.rs  mod.rs
src/provider/: bird.rs  brevo.rs  hyvor_relay.rs  mailgun.rs  mailjet.rs  mod.rs  resend.rs  sendgrid.rs  sendpulse.rs  shared.rs  trait.rs
src/queue/: memory.rs  mod.rs  postgres.rs  scylla.rs  sqlite.rs  worker.rs
src/rate_limit/: limiter.rs  mod.rs
src/smtp/: client.rs  mod.rs
src/telemetry/: events.rs  mod.rs  spans.rs
