[package]
name = "mailbridge"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["hyvor-relay", "api", "rustls", "queue-memory", "rate-limit"]
api = ["dep:reqwest"]
smtp = ["dep:lettre"]
hyvor-relay = []
sendgrid = []
sendpulse = []
mailgun = []
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
queue-memory = []
queue-sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/runtime-tokio-rustls"]
queue-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/runtime-tokio-rustls"]
queue-scylla = ["dep:scylla"]
rate-limit = ["dep:governor"]
dotenv = ["dep:dotenvy"]
telemetry = ["dep:tracing"]
test-utils = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
dotenvy = { version = "0.15", optional = true }
governor = { version = "0.10", optional = true }
lettre = { version = "0.11", optional = true, default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json"] }
scylla = { version = "1", optional = true }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", optional = true, default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = { version = "0.1", optional = true }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "test-util"] }

[[example]]
name = "send_http"
required-features = ["hyvor-relay", "api"]

[[example]]
name = "queue_worker"
required-features = ["hyvor-relay", "api", "queue-memory"]
